# fdu

./: .gitignore  README.md  pyproject.toml
fdu/: cli.py  fdu.py  orm.py  util.py
pdu/: __init__.py  cli.py  orm.py  pdu.py  util.py
