[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdu"
description = "Fast parallelised du alike"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
version = "2023.06"
license = {text = "MIT"}
dependencies = [
    "click >= 8.0",
    "peewee",
]
scripts = {fdu = "fdu.cli:cli"}

[tool.setuptools.dynamic]
version = {attr = "fdu.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.ruff]
select = ["ALL"]
ignore = [
    "TRY003", "EM101", "EM102", "ANN101", "ANN102", "ANN202", "ANN204", "PD002",
    "B905", "FBT001", "FBT002", "D401", "T201",
]
extend-exclude = ["code"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.black]
extend-exclude = '^/(code|venv)'
